--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,8 +1,8 @@
 @include('./settings/_head.html', {
-'title' : 'Заголовок текщей страницы',
-'description' : 'Описание текщей страницы',
-'keywords' : 'это, ключевые, запросы, текщей страницы',
-'robots' : 'noindex, nofollow',
+'title' : 'Главная страница | Фабрика Zetta',
+'description' : 'Фабрика Кухни ZETTA продает кухни по индивидуальному заказу с итальянскими фасадам. Лучшие кухни из Италии в Москве.',
+'keywords' : 'Купить кухню, купить кухню в Москве, итальянские кухни, Кухни из Италии, кухни с итальянскими фасадами, кухни на заказ',
+'robots' : 'index, follow',
 'ogImage' : '',
 })
 
