--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
 'description' : 'Фабрика Кухни ZETTA продает кухни по индивидуальному заказу с итальянскими фасадам. Лучшие кухни из Италии в Москве.',
 'keywords' : 'Купить кухню, купить кухню в Москве, итальянские кухни, Кухни из Италии, кухни с итальянскими фасадами, кухни на заказ',
 'robots' : 'index, follow',
-'ogImage' : '',
+'ogImage' : 'img/og-image.jpg',
 })
 
 @include('./components/blocks/_header.html')
