--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,9 +13,13 @@
     @include('./components/blocks/modals/_thank-modal.html')
 </div> -->
 
-<main class="main">
+<div class="content">
+    @include('./components/blocks/_side-menu.html')
+    <main class="main">
 
-</main>
+    </main>
+</div>
+
 
 @include('./components/blocks/_footer.html')
 @include('./settings/_bottom.html')
