--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,7 @@
 })
 
 @include('./components/blocks/header/_header.html')
+@include('./components/blocks/_menu-mobile.html')
 
 <!-- <div class="graph-modal">
     @include('./components/blocks/modals/_modal.html')
