--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,6 +7,7 @@
 })
 
 <!-- TODO: связь модалок и кнопок -->
+<!-- ? Записаться в салон в бургер-меню,  будет модалка открываться? -->
 
 @include('./components/blocks/header/_header.html')
 @include('./components/blocks/_menu-mobile.html')
