start questions block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,8 +6,8 @@
 'ogImage' : 'img/og-image.jpg',
 })
 
-<!-- TODO: связь модалок и кнопок -->
-<!-- ? Записаться в салон в бургер-меню,  будет модалка открываться? -->
+<!-- TODO: aria: связь модалок и кнопок, связь в спойлере
+-->
 
 @include('./components/blocks/header/_header.html')
 @include('./components/blocks/_side-menu.html')
@@ -22,6 +22,7 @@
     <main class="main">
 
     </main>
+    @include('./components/blocks/_questions.html')
     @include('./components/blocks/_footer.html')
 </div>
 
