--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,8 +11,8 @@
 
 @include('./components/blocks/header/_header.html')
 @include('./components/blocks/_side-menu.html')
-<div class="inner">
-    <!-- @include('./components/blocks/_menu-mobile.html') -->
+<div class="wrapper">
+    @include('./components/blocks/_menu-mobile.html')
 
     <div class="graph-modal">
         @include('./components/blocks/modals/_consultation.html')
