--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,6 +22,7 @@
     <main class="main">
 
     </main>
+    @include('./components/blocks/_form-block.html')
     @include('./components/blocks/_questions.html')
     @include('./components/blocks/_footer.html')
 </div>
