--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,6 +23,7 @@
 
     </main>
     @include('./components/blocks/_form-block.html')
+    @include('./components/blocks/_addresses-block.html')
     @include('./components/blocks/_questions.html')
     @include('./components/blocks/_footer.html')
 </div>
