add media-logos block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <main class="main">
-
+        @include('./pages/home-page/_media.html')
     </main>
     @include('./components/blocks/_form-block.html')
     @include('./components/blocks/_addresses-block.html')
