--- a/src/html/pages/home-page/_media.html
+++ b/src/html/pages/home-page/_media.html
@@ -5,7 +5,7 @@
     <ul class="media__items">
         <li class="media__item">
             <a class="media__link" href="#" target="_blank">
-                <img class="media__img" src="img/blocks/media-logos/habr.svg" alt="Хабр" width="124" height="40" loading="lazy">
+                <img class="media__img" src="img/blocks/media-logos/habr.svg" alt="habr" width="124" height="40" loading="lazy">
             </a>
         </li>
         <li class="media__item">
@@ -20,7 +20,7 @@
         </li>
         <li class="media__item">
             <a class="media__link" href="#" target="_blank">
-                <img class="media__img" src="img/blocks/media-logos/vc.svg" alt="Вк" width="148" height="50" loading="lazy">
+                <img class="media__img" src="img/blocks/media-logos/vc.svg" alt="vc.ru" width="148" height="50" loading="lazy">
             </a>
         </li>
     </ul>
