--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,6 +21,7 @@
 
     <main class="main">
         @include('./pages/home-page/_design-production.html')
+        @include('./pages/home-page/_video-reviews.html')
         @include('./pages/home-page/_facades-production.html')
         @include('./pages/home-page/_reviews.html')
         @include('./pages/home-page/_media.html')
