--- a/src/html/pages/home-page/completed-projects/_completed-projects-slider.html
+++ b/src/html/pages/home-page/completed-projects/_completed-projects-slider.html
@@ -14,11 +14,13 @@
             }
     </ul>
     <div class="swiper-pagination"></div>
-    <div class="completed-projects__buttons">
-        <div class="swiper-pagination-fractions"></div>
-        <button class="completed-projects__button completed-projects__button--prev swiper-button-prev" type="button">
-        </button>
-        <button class="completed-projects__button completed-projects__button--next swiper-button-next" type="button">
-        </button>
+    <div class="completed-projects__controls">
+        <div class="swiper-pagination-fraction"></div>
+        <div class="completed-projects__buttons">
+            <button class="completed-projects__button completed-projects__button--prev swiper-button-prev" type="button">
+            </button>
+            <button class="completed-projects__button completed-projects__button--next swiper-button-next" type="button">
+            </button>
+        </div>
     </div>
 </div>
