--- a/src/html/pages/home-page/completed-projects/_completed-projects.html
+++ b/src/html/pages/home-page/completed-projects/_completed-projects.html
@@ -29,9 +29,9 @@
             <div class="tabs__panel">
                 @include('./_completed-projects-slider.html', {
                 'data' : [{
-                'img' : 'verona',
+                'img' : 'arcobalena',
                 'alt' : 'Кухня',
-                'title' : 'Верона',
+                'title' : 'Аркобалена',
                 'price' : '730 000 ₽',
                 'question' : 'Tranche',
                 'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>',
@@ -43,23 +43,48 @@
                 'title' : 'Верона',
                 'price' : '730 000 ₽',
                 'question' : 'Tranche',
-                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>'
+                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>',
+                'detail' : 'null'
                 },
                 {
                 'img' : 'verona',
                 'alt' : 'Кухня',
                 'title' : 'Верона',
                 'price' : '730 000 ₽',
-                'question' : 'Tranche',
-                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>'
+                'question' : 'null',
+                'answer' : 'null',
+                'detail' : 'null'
                 },
                 {
                 'img' : 'verona',
                 'alt' : 'Кухня',
                 'title' : 'Верона',
                 'price' : '730 000 ₽',
+                'question' : 'Эмаль',
+                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов.</p> <p>Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p> ',
+                'detail' : 'null'
+                }]
+                })
+            </div>
+            <div class="tabs__panel">
+                @include('./_completed-projects-slider.html', {
+                'data' : [{
+                'img' : 'verona',
+                'alt' : 'Кухня',
+                'title' : 'Верона',
+                'price' : '23 730 000 ₽',
                 'question' : 'Tranche',
-                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>'
+                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>',
+                'detail' : 'null'
+                },
+                {
+                'img' : 'arcobalena',
+                'alt' : 'Кухня',
+                'title' : 'Аркобалена',
+                'price' : '730 000 ₽',
+                'question' : 'Tranche',
+                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>',
+                'detail' : 'за великолепнейшую кухню длиной целых 3 метра и несколько сантиметров'
                 }]
                 })
             </div>
@@ -71,7 +96,8 @@
                 'title' : 'Верона',
                 'price' : '730 000 ₽',
                 'question' : 'Tranche',
-                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>'
+                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>',
+                'detail' : 'за 3 метра'
                 }]
                 })
             </div>
@@ -83,19 +109,8 @@
                 'title' : 'Верона',
                 'price' : '730 000 ₽',
                 'question' : 'Tranche',
-                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>'
-                }]
-                })
-            </div>
-            <div class="tabs__panel">
-                @include('./_completed-projects-slider.html', {
-                'data' : [{
-                'img' : 'verona',
-                'alt' : 'Кухня',
-                'title' : 'Верона',
-                'price' : '730 000 ₽',
-                'question' : 'Tranche',
-                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>'
+                'answer' : '<p>Премиальная фурнитура Grass (Австрия) гарантирует 100% надежность всех механизмов. Петли и ящики Grass закрываются плавно и бесшумно, широко открываются и рассчитаны на 65 000 открытий/закрытий</p>',
+                'detail' : 'за 3 метра'
                 }]
                 })
             </div>
