add layout for convenience block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
 'ogImage' : 'img/og-image.jpg',
 })
 
-<!-- TODO: aria: связь модалок и кнопок, связь в спойлере; в модалке кнопка (непонято для чего); в хедере при hover выпадает меню; focus active для всех добавить; в форме с фоткой исправить заголовок; в реализованных проектах сделать тултип
+<!-- TODO: aria: связь модалок и кнопок, связь в спойлере; в модалке кнопка (непонято для чего); в хедере при hover выпадает меню; focus active для всех добавить; в форме с фоткой исправить заголовок;
 -->
 
 @include('./components/blocks/header/_header.html')
@@ -23,6 +23,7 @@
         @include('./pages/home-page/completed-projects/_completed-projects.html')
         @include('./pages/home-page/_design-production.html')
         @include('./pages/home-page/_video-reviews.html')
+        @include('./pages/home-page/convenience/_convenience.html')
         @include('./pages/home-page/_facades-production.html')
         @include('./pages/home-page/_reviews.html')
         @include('./pages/home-page/_media.html')
