--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,6 +25,7 @@
         @include('./pages/home-page/_video-reviews.html')
         @include('./pages/home-page/convenience/_convenience.html')
         @include('./pages/home-page/_facades-production.html')
+        @include('./pages/home-page/_blog-block.html')
         @include('./pages/home-page/_reviews.html')
         @include('./pages/home-page/_media.html')
     </main>
