add pagination for convenience block

--- a/src/html/pages/home-page/convenience/_convenience.html
+++ b/src/html/pages/home-page/convenience/_convenience.html
@@ -75,5 +75,17 @@
                 })
             </div>
         </div>
+        <div class="tabs__controls">
+            <div class="tabs__controls-btns">
+                <button class="tabs__controls-btn tabs__controls-btn--prev" aria-label="Назад" type="button">
+                </button>
+                <button class="tabs__controls-btn tabs__controls-btn--next" aria-label="Вперед" type="button">
+                </button>
+            </div>
+            <div class="tabs__counter">
+                <span class="tabs__counter-current"></span>
+                <span class="tabs__counter-total">/</span>
+            </div>
+        </div>
     </div>
 </section>
