add convenience block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,17 @@
 'ogImage' : 'img/og-image.jpg',
 })
 
-<!-- TODO: aria: связь модалок и кнопок, связь в спойлере; в модалке кнопка (непонято для чего); в хедере при hover выпадает меню; focus active для всех добавить; в форме с фоткой исправить заголовок;
+<!-- TODO: aria: 
+ 1) связь модалок и кнопок;
+ 2) связь в спойлере;
+ 3) в модалке кнопка (непонято для чего); 
+ 4) в хедере при hover выпадает меню; 
+ 5) focus active для всех добавить; 
+ 6) в форме с фоткой исправить заголовок; 
+ 7) не удаляется aria-selected в блоге;
+ 8) сделать так, чтобы лишние скрипты не работали на мобилках
+ 9) дизейбл кнопок (стрелок) в табах
+ 10) в логике convenience не нравится, что использую setTimeout. Нужно попробовать отрисовывать точки внутри класса
 -->
 
 @include('./components/blocks/header/_header.html')
