--- a/src/html/pages/home-page/convenience/_convenience-tabs.html
+++ b/src/html/pages/home-page/convenience/_convenience-tabs.html
@@ -16,6 +16,9 @@
         }
     </div>
     <div class="convenience__image">
+        <div class="convenience__points" aria-hidden>
+
+        </div>
         <picture>
             <source srcset="img/blocks/convenience/@img.avif" type="image/avif">
             <source srcset="img/blocks/convenience/@img.webp" type="image/webp">
