refactor home-page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,6 @@
  3) в модалке кнопка (непонято для чего); 
  4) в хедере при hover выпадает меню; 
  5) focus active для всех добавить; 
- 6) в форме с фоткой исправить заголовок; 
  7) не удаляется aria-selected в блоге;
  8) сделать так, чтобы лишние скрипты не работали на мобилках
  9) дизейбл кнопок (стрелок) в табах
@@ -22,7 +21,7 @@
 @include('./components/blocks/header/_header.html')
 @include('./components/blocks/_side-menu.html')
 <div class="wrapper">
-    @include('./components/blocks/_menu-mobile.html')
+    <!-- @include('./components/blocks/_menu-mobile.html') -->
 
     <div class="graph-modal">
         @include('./components/blocks/modals/_consultation.html')
