--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,7 +21,7 @@
 @include('./components/blocks/header/_header.html')
 @include('./components/blocks/_side-menu.html')
 <div class="wrapper">
-    <!-- @include('./components/blocks/_menu-mobile.html') -->
+    @include('./components/blocks/_menu-mobile.html')
 
     <div class="graph-modal">
         @include('./components/blocks/modals/_consultation.html')
@@ -29,19 +29,30 @@
     </div>
 
     <main class="main">
-        @include('./pages/home-page/completed-projects/_completed-projects.html')
-        @include('./pages/home-page/_design-production.html')
-        @include('./pages/home-page/_video-reviews.html')
-        @include('./pages/home-page/convenience/_convenience.html')
-        @include('./pages/home-page/_facades-production.html')
-        @include('./pages/home-page/_blog-block.html')
-        @include('./pages/home-page/_reviews.html')
-        @include('./pages/home-page/_media.html')
+        <!-- @include('./pages/home-page/hero/hero.html') -->
+        <div class="content">
+            <div class="content__side-bg"></div>
+            <div class="content__blocks">
+                @include('./pages/home-page/completed-projects/_completed-projects.html')
+                @include('./pages/home-page/_design-production.html')
+                @include('./pages/home-page/_video-reviews.html')
+                @include('./pages/home-page/convenience/_convenience.html')
+                @include('./pages/home-page/_facades-production.html')
+                @include('./pages/home-page/_blog-block.html')
+                @include('./pages/home-page/_reviews.html')
+                @include('./pages/home-page/_media.html')
+            </div>
+        </div>
     </main>
-    @include('./components/blocks/_form-block.html')
-    @include('./components/blocks/_addresses-block.html')
-    @include('./components/blocks/_questions.html')
-    @include('./components/blocks/_footer.html')
+    <div class="content">
+        <div class="content__side-bg"></div>
+        <div class="content__blocks">
+            @include('./components/blocks/_form-block.html')
+            @include('./components/blocks/_addresses-block.html')
+            @include('./components/blocks/_questions.html')
+            @include('./components/blocks/_footer.html')
+        </div>
+    </div>
 </div>
 
 
