--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,10 +16,14 @@
  8) сделать так, чтобы лишние скрипты не работали на мобилках
  9) дизейбл кнопок (стрелок) в табах
  10) в логике convenience не нравится, что использую setTimeout. Нужно попробовать отрисовывать точки внутри класса
+ 11) не нравится, что фон задаю  и хедеру и header__navigation
+ 13) transition всем в хедере + ломается бургер
 -->
 
 <h1 class="sr-only">Фабрика Zetta — производство кухонь!</h1>
-@include('./components/blocks/header/_header.html')
+@include('./components/blocks/header/_header.html', {
+'class' : 'header--transparent'
+})
 @include('./components/blocks/_side-menu.html')
 <div class="wrapper">
     @include('./components/blocks/_menu-mobile.html')
