--- a/src/html/pages/home-page/completed-projects/_completed-projects.html
+++ b/src/html/pages/home-page/completed-projects/_completed-projects.html
@@ -1,4 +1,4 @@
-<section class="completed-projects section">
+<section class="completed-projects section" data-products-parent>
     <h2 class="completed-projects__title title">
         Реализованные проекты
     </h2>
