--- a/src/html/home.html
+++ b/src/html/home.html
@@ -3,9 +3,9 @@
         <a href="index.html">Главная</a>
     </li>
     <li>
-        <a href="index.html">Страница каталог</a>
+        <a href="catalog.html">Страница каталога</a>
     </li>
     <li>
-        <a href="index.html">Страница товара</a>
+        <a href="product.html">Страница товара</a>
     </li>
 </ul>
