--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,7 +20,12 @@
  13) ломается бургер
  14) fixedHeader, changeColorSideMenu учитывать, что высота экрана может меняться
  15) fixedHeader, changeColorSideMenu оптимизация 
- 16) убрать лишние классы у заголовокв, добавить aria-hidden для ымп
+ 16) убрать лишние классы у заголовокв, добавить aria-hidden для svg
+ 17) проверить хлебные крошки и мобильное меню на переполнение
+ 18) ругается stylelint
+ 19) размытые картинки
+ 20) чтобы на одном разрешение у всех слайдеров убирались стрелки
+ 21) попробовать controls позиционирвоать не на абсолюте + в слайдере постараться не дублировать стили (сделать примерно как в других решениях на странице товара)
 -->
 
 <h1 class="sr-only">Фабрика Zetta — производство кухонь!</h1>
