--- a/src/html/pages/product-page/_other-solutions.html
+++ b/src/html/pages/product-page/_other-solutions.html
@@ -5,21 +5,21 @@
             Другие модели
         </div>
     </div>
-    <div class="other-solutions__wrapper">
-        <div class="other-solutions__header">
-            <h2 class="other-solutions__title title">
-                Другие кухонные решения
-            </h2>
-            <div class="other-solutions__controls">
-                <div class="swiper-pagination-fraction"></div>
-                <div class="other-solutions__buttons">
-                    <button class="other-solutions__button other-solutions__button--prev swiper-button-prev" type="button">
-                    </button>
-                    <button class="other-solutions__button other-solutions__button--next swiper-button-next" type="button">
-                    </button>
-                </div>
+    <div class="other-solutions__header">
+        <h2 class="other-solutions__title title">
+            Другие кухонные решения
+        </h2>
+        <div class="other-solutions__controls">
+            <div class="other-solutions__fraction swiper-pagination-fraction"></div>
+            <div class="other-solutions__buttons">
+                <button class="other-solutions__button other-solutions__button--prev swiper-button-prev" type="button">
+                </button>
+                <button class="other-solutions__button other-solutions__button--next swiper-button-next" type="button">
+                </button>
             </div>
         </div>
+    </div>
+    <div class="other-solutions__wrapper">
         <div class="other-solutions__swiper swiper">
             <ul class="other-solutions__items swiper-wrapper">
                 <li class="other-solutions__item swiper-slide">
