--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,6 +26,9 @@
  19) размытые картинки
  20) чтобы на одном разрешение у всех слайдеров убирались стрелки
  21) попробовать controls позиционирвоать не на абсолюте + в слайдере постараться не дублировать стили (сделать примерно как в других решениях на странице товара)
+ 22) проверить width и height атрибуты для картинок, чтобы соответствовали фактическим размерам на 1920
+ 24) ДЛЯ product-projects и другие решения сделать что-то, чтобы не дублировать стили
+ 25) fancybox на страницу товара
 -->
 
 <h1 class="sr-only">Фабрика Zetta — производство кухонь!</h1>
