add product-characteristics block

--- a/src/html/pages/catalog-page/_catalog.html
+++ b/src/html/pages/catalog-page/_catalog.html
@@ -1,4 +1,4 @@
-<section class="catalog" data-products-parent>
+<section class="catalog" data-tippy-parent>
     <h1 class="heading">
         Каталог кухонь
     </h1>
