add facade-colors block

--- a/src/html/product.html
+++ b/src/html/product.html
@@ -30,6 +30,7 @@
 
                 <main>
                     @include('./components/blocks/_form-block.html')
+                    @include('./pages/product-page/_facade-colors.html')
                     @include('./pages/product-page/_product-characteristics.html')
                     @include('./pages/product-page/_product-projects.html')
                     @include('./components/blocks/_addresses-block.html')
