--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,6 +29,7 @@
  22) проверить width и height атрибуты для картинок, чтобы соответствовали фактическим размерам на 1920
  24) ДЛЯ product-projects и другие решения сделать что-то, чтобы не дублировать стили
  25) fancybox на страницу товара
+ 26) unique-quality и guarantee-block что-то придумать, чтобы не дублирвать стили
 -->
 
 <h1 class="sr-only">Фабрика Zetta — производство кухонь!</h1>
