add quality-materials block

--- a/src/html/pages/product-page/_quality-materials.html
+++ b/src/html/pages/product-page/_quality-materials.html
@@ -9,24 +9,9 @@
         Качество материалов бизнес-класса
     </h2>
     <div class="quality-materials__content" data-tippy-parent>
-        <ul class="quality-materials__items">
+        <ul class="quality-materials__items quality-materials__items--desktop">
             <li class="quality-materials__item" style="top: 12%; left: 44%;">
-                <button class="quality-materials__button" type="button" data-tippy-content>
-                    <span class="sr-only">Толщина корпуса</span>
-                </button>
-                <div class="quality-materials__tooltip tooltip">
-                    <h3 class="quality-materials__subtitle">
-                        Толщина корпуса
-                    </h3>
-                    <div class="quality-materials__text">
-                        <p>
-                            Мы используем корпус толщиной только 18мм, а не 16 мм, как большинство производителей, что обеспечивает максимальную жесткость и прочность конструкции. Корпуса закромлены по всему периметру, даже с невидимой стороны - это исключает риск разбухания.
-                        </p>
-                    </div>
-                </div>
-            </li>
-            <li class="quality-materials__item" style="top: 48%; left: 15%;">
-                <button class="quality-materials__button" type="button" data-tippy-content>
+                <button class="quality-materials__button" type="button" data-interactive-tippy-content>
                     <span class="sr-only">Толщина корпуса</span>
                 </button>
                 <div class="quality-materials__tooltip tooltip">
@@ -40,23 +25,38 @@
                     </div>
                 </div>
             </li>
-            <li class="quality-materials__item" style="top: 64%; left: 45%;">
-                <button class="quality-materials__button" type="button" data-tippy-content>
-                    <span class="sr-only">Толщина корпуса</span>
+            <li class="quality-materials__item" style="top: 48%; left: 15%;">
+                <button class="quality-materials__button" type="button" data-interactive-tippy-content>
+                    <span class="sr-only">Система крепления</span>
                 </button>
                 <div class="quality-materials__tooltip tooltip">
                     <h3 class="quality-materials__subtitle">
-                        Толщина корпуса
+                        Система крепления
                     </h3>
                     <div class="quality-materials__text">
                         <p>
-                            Мы используем корпус толщиной только 18мм, а не 16 мм, как большинство производителей, что обеспечивает максимальную жесткость и прочность конструкции. Корпуса закромлены по всему периметру, даже с невидимой стороны - это исключает риск разбухания.
+                            Система крепления шкафов к стене с использованием навески Camar (Италия) и рельсы-навески позволяет проводить регулировку нескольких плоскостях, что позволяет обойти возможные неровности стен. Каждый верхний модуль выдерживает нагрузку до 100 кг.
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li class="quality-materials__item" style="top: 64%; left: 45%;">
+                <button class="quality-materials__button" type="button" data-interactive-tippy-content>
+                    <span class="sr-only">Стандарты</span>
+                </button>
+                <div class="quality-materials__tooltip tooltip">
+                    <h3 class="quality-materials__subtitle">
+                        Стандарты
+                    </h3>
+                    <div class="quality-materials__text">
+                        <p>
+                            Мы используем только эксцентриковую стяжку корпусов, которая является общепризнанным мировым стандартом.
                         </p>
                     </div>
                 </div>
             </li>
             <li class="quality-materials__item" style="top: 72%; left: 78%;">
-                <button class="quality-materials__button" type="button" data-tippy-content>
+                <button class="quality-materials__button" type="button" data-interactive-tippy-content>
                     <span class="sr-only">Толщина корпуса</span>
                 </button>
                 <div class="quality-materials__tooltip tooltip">
@@ -78,5 +78,55 @@
                 <img class="quality-materials__img" src="img/blocks/quality-materials/1.jpg" alt="Кухня" width="1250" height="636" loading="lazy">
             </picture>
         </div>
+        <ul class="quality-materials__items quality-materials__items--mobile">
+            <li class="quality-materials__item">
+                <div class="quality-materials__tooltip">
+                    <h3 class="quality-materials__subtitle">
+                        Толщина корпуса
+                    </h3>
+                    <div class="quality-materials__text">
+                        <p>
+                            Мы используем корпус толщиной только 18мм, а не 16 мм, как большинство производителей, что обеспечивает максимальную жесткость и прочность конструкции. Корпуса закромлены по всему периметру, даже с невидимой стороны - это исключает риск разбухания.
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li class="quality-materials__item">
+                <div class="quality-materials__tooltip">
+                    <h3 class="quality-materials__subtitle">
+                        Толщина корпуса
+                    </h3>
+                    <div class="quality-materials__text">
+                        <p>
+                            Мы используем корпус толщиной только 18мм, а не 16 мм, как большинство производителей, что обеспечивает максимальную жесткость и прочность конструкции. Корпуса закромлены по всему периметру, даже с невидимой стороны - это исключает риск разбухания.
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li class="quality-materials__item">
+                <div class="quality-materials__tooltip">
+                    <h3 class="quality-materials__subtitle">
+                        Система крепления
+                    </h3>
+                    <div class="quality-materials__text">
+                        <p>
+                            Система крепления шкафов к стене с использованием навески Camar (Италия) и рельсы-навески позволяет проводить регулировку нескольких плоскостях, что позволяет обойти возможные неровности стен. Каждый верхний модуль выдерживает нагрузку до 100 кг.
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li class="quality-materials__item">
+                <div class="quality-materials__tooltip">
+                    <h3 class="quality-materials__subtitle">
+                        Стандарты
+                    </h3>
+                    <div class="quality-materials__text">
+                        <p>
+                            Мы используем только эксцентриковую стяжку корпусов, которая является общепризнанным мировым стандартом.
+                        </p>
+                    </div>
+                </div>
+            </li>
+        </ul>
     </div>
 </section>
