add product-about block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,6 +30,7 @@
  24) ДЛЯ product-projects и другие решения сделать что-то, чтобы не дублировать стили
  25) fancybox на страницу товара
  26) unique-quality и guarantee-block что-то придумать, чтобы не дублирвать стили
+ 27) сделать какой-то класс или миксин для кнопки с вопросом
 -->
 
 <h1 class="sr-only">Фабрика Zetta — производство кухонь!</h1>
