--- a/src/html/product.html
+++ b/src/html/product.html
@@ -29,6 +29,7 @@
                 })
 
                 <main>
+                    @include('./pages/product-page/_product-about.html')
                     @include('./pages/product-page/_quality-materials.html')
                     @include('./pages/product-page/_guarantee.html')
                     @include('./pages/product-page/_unique-quality.html')
